--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
@@ -22,51 +22,53 @@
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card-body">
-                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
-                    {
-                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
-                        @Html.HiddenFor(m => m.InventoryCategoryId)
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.CategoryName)
+                <div class="card">
+                    <div class="card-body">
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                        {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+                            @Html.HiddenFor(m => m.InventoryCategoryId)
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.CategoryName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.CategoryCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.ItemPrefix)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.InventoryCategoryTypeMasterId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", inventoryCategoryType)
+                                        @Html.ValidationMessageFor(x => x.InventoryCategoryTypeMasterId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", parentInventoryCategorys)
+                                        @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                    @Html.ValidationMessageFor(x => x.CategoryCode)
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label" })
-                                    @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                    @Html.ValidationMessageFor(x => x.ItemPrefix)
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.InventoryCategoryTypeMasterId, new { @class = "form-label required" })
-                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", inventoryCategoryType)
-                                    @Html.ValidationMessageFor(x => x.InventoryCategoryTypeMasterId)
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label" })
-                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", parentInventoryCategorys)
-                                    @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
-                                </div>
-                            </div>
-                        </div>
-                      @*   <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            @*   <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                         <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
