--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemTrackingDimension/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemTrackingDimension/CreateEdit.cshtml
@@ -19,30 +19,32 @@
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card-body">
-                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
-                    {
-                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
-                        @Html.HiddenFor(m => m.InventoryItemTrackingDimensionId)
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.TrackingDimensionName, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.TrackingDimensionName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.TrackingDimensionName)
+                <div class="card">
+                    <div class="card-body">
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                        {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+                            @Html.HiddenFor(m => m.InventoryItemTrackingDimensionId)
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.TrackingDimensionName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.TrackingDimensionName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.TrackingDimensionName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.TrackingDimensionCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.TrackingDimensionCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.TrackingDimensionCode)
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.TrackingDimensionCode, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.TrackingDimensionCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                    @Html.ValidationMessageFor(x => x.TrackingDimensionCode)
-                                </div>
-                            </div>
-                        </div>
-                       @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                         <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
