--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryUoMMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryUoMMaster/CreateEdit.cshtml
@@ -19,81 +19,84 @@
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card-body">
-                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
-                    {
-                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)                            @Html.HiddenFor(m => m.InventoryUoMMasterId)
+                <div class="card">
+                    <div class="card-body">
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                        {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+                            @Html.HiddenFor(m => m.InventoryUoMMasterId)
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.UomCode, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.UomCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @Html.ValidationMessageFor(x => x.UomCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.UomDescription, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.UomDescription, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.UomDescription)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CommercialDescription, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.CommercialDescription, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.CommercialDescription)
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.GeneralMeasurementUnitMasterId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                        {
+                                            DropdownType = DropdownTypeEnum.MeasurementUnit.ToString(),
+                                                                        DropdownName = "GeneralMeasurementUnitMasterId",
+                                                                        DropdownSelectedValue = Model.GeneralMeasurementUnitMasterId
+                                                                        .ToString()
+                                                                        })
+                                    @Html.ValidationMessageFor(x => x.GeneralMeasurementUnitMasterId)
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.ConvertionFactor, new { @class = "form-label" })
+                                    @Html.TextBoxFor(x => x.ConvertionFactor, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.ConvertionFactor)
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.AdditiveConstant, new { @class = "form-label" })
+                                    @Html.TextBoxFor(x => x.AdditiveConstant, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.AdditiveConstant)
+                                </div>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.UomCode, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.UomCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                    @Html.ValidationMessageFor(x => x.UomCode)
+                                    @Html.LabelFor(x => x.DecimalPlacesUpto, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.DecimalPlacesUpto, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.DecimalPlacesUpto)
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="mb-3">
-                                    @Html.LabelFor(x => x.UomDescription, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.UomDescription, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.UomDescription)
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.CommercialDescription, new { @class = "form-label" })
-                                    @Html.TextBoxFor(x => x.CommercialDescription, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.CommercialDescription)
+                                    @Html.LabelFor(x => x.DecimalRounding, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.DecimalRounding, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.DecimalRounding)
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.GeneralMeasurementUnitMasterId, new { @class = "form-label required" })
-                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                        DropdownType = DropdownTypeEnum.MeasurementUnit.ToString(),
-                                                                DropdownName = "GeneralMeasurementUnitMasterId",
-                                                                DropdownSelectedValue = Model.GeneralMeasurementUnitMasterId
-                                                                .ToString()
-                                                                })
-                                @Html.ValidationMessageFor(x => x.GeneralMeasurementUnitMasterId)
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="mb-3">
-                                @Html.LabelFor(x => x.ConvertionFactor, new { @class = "form-label" })
-                                @Html.TextBoxFor(x => x.ConvertionFactor, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(x => x.ConvertionFactor)
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="mb-3">
-                                @Html.LabelFor(x => x.AdditiveConstant, new { @class = "form-label" })
-                                @Html.TextBoxFor(x => x.AdditiveConstant, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(x => x.AdditiveConstant)
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="mb-3">
-                                @Html.LabelFor(x => x.DecimalPlacesUpto, new { @class = "form-label required" })
-                                @Html.TextBoxFor(x => x.DecimalPlacesUpto, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(x => x.DecimalPlacesUpto)
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="mb-3">
-                                @Html.LabelFor(x => x.DecimalRounding, new { @class = "form-label required" })
-                                @Html.TextBoxFor(x => x.DecimalRounding, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(x => x.DecimalRounding)
-                            </div>
-                        </div>
-                    </div>
-                 @*    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                        @*    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                     <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
-                                        }
+                                                }
+                    </div>
                 </div>
             </div>
         </div>
